tests/e2e/snapshots/test__e2e__flow__liveinstall__moonup_uninstall_clear.snap
---
source: tests/e2e/flow.rs
info:
  program: moonup
  args:
    - uninstall
    - "--clear"
---
success: true
exit_code: 0
----- stdout -----
 Cleared all cached downloads

----- stderr -----
