tests/e2e/snapshots/test__e2e__flow__liveinstall__moonup_uninstall_interactive.snap
---
source: tests/e2e/flow.rs
expression: output
---
 ›
⬚ 0.9.2+bbe2b338f
✔ 0.9.2+bbe2b338f
✔ Select toolchains to uninstall · 0.9.2+bbe2b338f
✔  Uninstalled toolchain 0.9.2+bbe2b338f
