tests/e2e/snapshots/test__e2e__flow__liveinstall__moonup_update.snap
---
source: tests/e2e/flow.rs
info:
  program: moonup
  args:
    - update
---
success: true
exit_code: 0
----- stdout -----
The latest toolchain is up to date
The nightly toolchain is up to date

----- stderr -----
