tests/e2e/snapshots/test__e2e__flow__liveinstall__use_default_version.snap
---
source: tests/e2e/flow.rs
info:
  program: moon
  args:
    - version
---
success: true
exit_code: 0
----- stdout -----
moon 0.1.20241231 (16670d0 2024-12-31)

----- stderr -----
