tests/e2e/snapshots/test__e2e__flow__liveinstall__use_pinned_version.snap
---
source: tests/e2e/flow.rs
info:
  program: moon
  args:
    - version
    - "--all"
---
success: true
exit_code: 0
----- stdout -----
moon 0.1.20241231 (16670d0 2024-12-31) ~/.moon/bin/moon.exe
moonc v0.1.20241231+ba15a9a4e ~/.moon/bin/moonc.exe
moonrun 0.1.20241231 (16670d0 2024-12-31) ~/.moon/bin/moonrun.exe

----- stderr -----
